--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,7 +27,7 @@
     <!-- Tabs -->
     <string name="about_title">About</string>
     <string name="features_title">Features</string>
-    <string name="axxion_main_members">Core Team</string>
+    <string name="axxion_main_members">Dev Team</string>
     <string name="axxion_maintainers">Maintainers</string>
     <string name="axxion_team">Team Meetup</string>
 
@@ -56,6 +56,6 @@
     <string name="status_dev_and_co_founder">Developer / Co-Founder</string>
 
     <!-- URLs -->
-    <string name="cr_website_title">Visit our website</string>
+    <string name="cr_website_title">Visit our Google+ Community</string>
     <string name="cr_donate_title">Donate to Axxion</string>
 </resources>
